# learn_vulkan

./: .clang-format  .gitignore  CMakeLists.txt  NOTES.md
src/: main.cpp
src/core/: Application.cpp  Application.h  CMakeLists.txt  CopyToLocalBufferJob.cpp  CopyToLocalBufferJob.h  CopyToLocalImageJob.cpp  CopyToLocalImageJob.h  CopyToLocalJob.cpp  CopyToLocalJob.h  Input.h  Mat4.cpp  Mat4.h  Transition.h  VulkanApp.cpp  VulkanApp.h  VulkanDeleter.h  VulkanFunctions.cpp  VulkanFunctions.h  VulkanFunctions.inl  VulkanRenderer.cpp  VulkanRenderer.h
src/os/: CMakeLists.txt  Common.cpp  Common.h  TypeDefs.h  Window.cpp  Window.h
src/os/win32/: Common.cpp
src/shaders/: shader.frag  shader.frag.spv  shader.frag.spv.debug  shader.vert  shader.vert.spv  shader.vert.spv.debug
src/utils/: CMakeLists.txt  ConsoleLogger.cpp  ConsoleLogger.h  FileLogger.cpp  FileLogger.h  Flags.h  Logger.cpp  Logger.h
